--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@
 name: build
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [develop]
 
@@ -16,14 +17,41 @@ jobs:
         node-version: [20.x]
 
     steps:
-      - uses: actions/checkout@v2
-        #with:
-        #  fetch-depth: 0 # extra info for sonar
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # extra info for sonar
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run lint
-      - run: npm run ci:build
-      - run: npm run test:coverage
+
+      - name: install
+        run: npm ci
+      - name: lint
+        run: npm run lint
+      - name: Build
+        run: npm run ci:build
+      - name: tests
+        run: npm run test:coverage
+
+      - name: Set Version number
+        run: echo "TAG=$(npm pkg get version --workspaces=false | tr -d \")" >> "$GITHUB_ENV"
+      # Sonar scan. https://github.com/marketplace/actions/sonarqube-scan
+      - name: SonarQube Scan
+        if: github.actor != 'dependabot[bot]' # Don't scan/block dependabot updates
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          args: >
+            -Dsonar.projectVersion=$TAG
+      # Sonar verify https://github.com/marketplace/actions/sonarqube-quality-gate-check
+      - name: SonarQube Quality Gate check
+        if: github.actor != 'dependabot[bot]' # Don't scan/block dependabot updates
+        id: sonarqube-quality-gate-check
+        uses: sonarsource/sonarqube-quality-gate-action@master
+        with:
+          pollingTimeoutSec: 600
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
