--- a/.github/workflows/dependabot-review.yml
+++ b/.github/workflows/dependabot-review.yml
@@ -1,3 +1,5 @@
+# This workflow automates resolving dependabot PRs that don't intoduce issues.
+
 name: Dependabot approval
 on: pull_request_target
 
