--- a/.github/workflows/dependencycheck.yml
+++ b/.github/workflows/dependencycheck.yml
@@ -3,8 +3,11 @@
 name: dependencycheck
 
 on:
-  push:
-    branches: [develop, main, master]
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *' # 12:00 AM Daily
+  pull_request:
+    branches: [main, master]
 
 jobs:
   dependencycheck:
@@ -15,9 +18,22 @@ jobs:
         node-version: [20.x]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm audit
+      - run: npm ci
+
+      # Dependency-Check
+      - name: Dependency-Check
+        run: npx owasp-dependency-check --scan . --failOnCVSS 1 --suppression suppression.xml --nvdApiKey ${{ secrets.NVD_KEY }} --disableYarnAudit #--exclude node_modules/node-gyp/**/* --exclude dependency-check-bin/**/* 
+      - name: Upload Report
+        uses: actions/upload-artifact@v4
+        if: ${{ failure() }}
+        with:
+          name: dependency-check-reports
+          path: dependency-check-reports
+      # Dependency-Track
+      - name: Dependency-Track
+        run: npx @cyclonedx/cyclonedx-npm --package-lock-only --output-file SBOM.json
+        
