--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint:css": "stylelint \"**/*.css\"",
     "lint": "npm run lint:css & npm run lint:ts",
     "ci:build": "tsc --build && copyfiles --up 1 \"src/**/*.css\" dist  && copyfiles package.json LICENSE dist && copyfiles --up 1 \"src/fonts/**\" dist ",
-    "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml",
+    "ci:bom": "npx cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml",
     "verify": "npm run lint -- --fix && npm run ci:build && npm run test:coverage && echo 'All Tests Passed!'"
   },
   "peerDependencies": {
@@ -36,7 +36,6 @@
     "color": "^5.0.0"
   },
   "devDependencies": {
-    "@cyclonedx/cyclonedx-npm": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
@@ -63,9 +62,6 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
-  },
-  "overrides": {
-    "libxmljs2": "^1.0.0"
   },
   "importSort": {
     ".js": {
