--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@modusoperandi/licit-custom-styles",
-  "version": "1.0.6",
+  "version": "1.3.5",
+  "license": "MIT",
   "type": "module",
   "subversion": "1",
   "description": "CustomStyle plugin built with ProseMirror",
@@ -9,10 +10,9 @@
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MO-Movia/licit.git"
+    "url": "git+https://github.com/MO-Movia/licit-plugin-contrib-styles.git"
   },
   "scripts": {
-    "verify": "npm run lint && npm run ci:build && npm run test:coverage",
     "test": "jest",
     "test:unit": "jest",
     "test:coverage": "jest --coverage",
@@ -20,55 +20,48 @@
     "lint:ts": "eslint src --ext .ts,.tsx --fix",
     "lint:css": "stylelint \"**/*.css\"",
     "lint": "npm run lint:css & npm run lint:ts",
-    "ci:build": "tsc --build && copyfiles --up 1 \"src/**/*.css\" dist  && copyfiles package.json dist && copyfiles --up 1 \"src/fonts/**\" dist ",
-    "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml"
+    "ci:build": "tsc --build && copyfiles --up 1 \"src/**/*.css\" dist  && copyfiles package.json LICENSE dist && copyfiles --up 1 \"src/fonts/**\" dist ",
+    "ci:bom": "npx cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml",
+    "verify": "npm run lint -- --fix && npm run ci:build && npm run test:coverage && echo 'All Tests Passed!'"
   },
   "peerDependencies": {
-    "@modusoperandi/licit-doc-attrs-step": "file:modusoperandi-licit-doc-attrs-step-1.0.2.tgz",
-    "@modusoperandi/licit-ui-commands": "file:modusoperandi-licit-ui-commands-1.0.0.tgz",
-    "uuid": "^9.0.0"
-  },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "color": "^4.2.3",
-    "katex": "^0.16.10",
-    "node-mathquill": "^0.10.2",
+    "@modusoperandi/licit-doc-attrs-step": "file:modusoperandi-licit-doc-attrs-step-1.0.3.tgz",
+    "@modusoperandi/licit-ui-commands": "file:modusoperandi-licit-ui-commands-1.0.9.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "dependencies": {
+    "uuid": "^11.1.0",
+    "classnames": "^2.5.1",
+    "color": "^5.0.0"
+  },
   "devDependencies": {
-    "@cyclonedx/cyclonedx-npm": "^1.16.1",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@types/jest": "^29.1.2",
-    "@types/node": "^22.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@types/jest": "^29.5.14",
     "copyfiles": "^2.4.1",
     "eslint": "8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.2.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.27.0",
-    "husky": "^9.0.11",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.5",
     "jest-junit": "^16.0.0",
-    "jest-prosemirror": "^3.0.0",
+    "jest-prosemirror": "^3.0.1",
     "jest-sonar-reporter": "^2.0.0",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.4",
-    "stylelint": "^16.2.0",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-prettier": "^5.0.0",
-    "ts-jest": "^29.0.7",
-    "ts-loader": "^9.5.0",
-    "ts-node": "^10.4.0",
-    "typescript": "5.5.4"
-  },
-  "overrides": {
-    "semver": "^7.5.2",
-    "libxmljs2": "^1.0.0"
+    "lint-staged": "^16.1.4",
+    "prettier": "^3.6.2",
+    "stylelint": "^16.23.0",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-prettier": "^5.0.3",
+    "ts-jest": "^29.4.1",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "importSort": {
     ".js": {
