--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,26 +15,13 @@
     "pretty": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": [
-      "jest",
-      "node",
-      "jest-prosemirror"
-    ],
     // Ensure that .d.ts files are created by tsc, but not .js files
     "declaration": true,
-    // Ensure that Babel can safely transpile files in the TypeScript project
-    //"isolatedModules": true
   },
   "typeAcquisition": {
     "enable": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.test.ts",
-    "**/*.test.tsx"
+  "files": [
+    "src/index.ts"
   ]
 }
